* Android
  - keep display backlight on, don't suspend
  - support extra large displays (tablets)
  - allow task switching
  - disallow multiple instances of XCSoar
  - show notification icon while running
  - implement "Quit" properly
  - enable cruise/climb mode switching
  - use the external SD card on Samsung Galaxy
  - show on-screen keyboard buttons
  - fix profile breakage

Version 6.0.2 - 2011/01/20
* devices
  - more robust NMEA checksum parser
  - CAI302: restart I/O thread after declaration failure
  - CAI302: parse PCAID baro altitude if "!w" unavailable
  - Condor: read wind from LXWP0
* user interface
  - Language: translation updates
  - Language: add Spanish translation
  - Language: add Russian translation
  - Language: translations Czech, Greek, Croatian, Italian, Serbian,
    Swedish imported from LK8000
  - Window: disable sunken window edges on HP31x
  - Target: adjust map layout
* map
  - Waypoints: more reliable waypoint decluttering
  - Topology: fix rendering bug
  - Terrain: reduce slope shading artefacts
  - Terrain: load more raster tiles on modern devices
  - Task: fix crash when drawing deformed sectors
* data files
  - Fixed potential crash while reading airfields files
  - Added more polars (Hang gliders, DG1000, Blanik, Jantar, ...)
* Android / Linux / OpenGL
  - enable translations
  - fix dialog titles
  - support big displays (tablets)
  - implement check boxes (for enabling "Expert" mode)
  - fix airspace rendering

Version 6.0.1 - 2010/12/26
* map
  - task, glide terrain: fix rendering bugs
* user interface
  - Language: translation updates
  - Language: always fall back to resource data
  - Language: enable translation on PPC2000/PPC2003
  - dialog "Switches": portrait mode layout fixed
  - dialog "Statistics": draw trace on task page
* terrain / topology
  - minor memory leak fixed
* glide computer
  - new built-in polars: IS28B2 and SZD30

Version 6.0 - 2010/12/19
* build system